--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.Go linguist-detectable=true
+*.Golang linguist-detectable=true
 *.js linguist-detectable=false
 *.html linguist-detectable=false
 *.css linguist-detectable=false
